# object-gl

./: .gitignore  CMakeLists.txt  README.md
include/object/: egl.hpp  gl.hpp
src/: egl.cpp  gl.cpp
